little change in version 1

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@
 
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
     <meta name="description" content="See your and your's class end semeseter result here">
-    <meta property="og:title" content="NIT JSR | Result Portal" />
+    <meta property="og:title" content="Result Portal" />
     <meta property="og:url" content="https://nilekrator.pythonanywhere.com/" />
     <meta property="og:description" content="See your and your's class end semeseter result here">
 
     <meta name="description" content="See your and your's class end semester result here">
-    <meta property="og:title" content="NIT JSR | Result Portal" />
+    <meta property="og:title" content="Result Portal" />
     <meta property="og:url" content="https://nilekrator.pythonanywhere.com/" />
     <meta property="og:description" content="Get your and your's class end semester result here">
     <meta property="og:image" content="https://cdn.pixabay.com/photo/2016/09/16/19/16/hat-1674894_960_720.png">
@@ -141,7 +141,7 @@ font-family: 'Audiowide', cursive;
 
 </body>
 
-<script src = "{{ url_for('static', filename='files/login.min.js') }}?version={{ random }}"></script>
+<script src = "{{ url_for('static', filename='files/login.js') }}?version={{ random }}"></script>
 <script src = "{{ url_for('static', filename='files/feedback.min.js') }}?version={{ random }}"></script>
 
 <script>
