removed update notice

--- a/templates/student/layout.html
+++ b/templates/student/layout.html
@@ -92,6 +92,18 @@ body {
     </div>
 
     <div id = "main-content" style = "z-index: 5000 !important; margin-top: 70px">
+
+        <!--<div class="ui container" style = "margin-bottom: 30px">-->
+        <!--    <div class="ui warning icon message">-->
+        <!--        <i class="info icon"></i>-->
+        <!--        <div class="content">-->
+        <!--            <div class="header">-->
+        <!--                Attention!-->
+        <!--            </div>-->
+        <!--            <p>Results will be updated on January 6. And by the way HAPPY NEW YEAR.</p>-->
+        <!--        </div>-->
+        <!--    </div>-->
+        <!--</div>-->
       {% block content %}{% endblock %}
     </div>
 
