--- a/templates/login.html
+++ b/templates/login.html
@@ -46,6 +46,18 @@ font-family: 'Audiowide', cursive;
     RESULT PORTAL
 </div>
 
+<!--<div style = "padding: 30px 30px 0 30px">-->
+<!--    <div class="ui warning icon message">-->
+<!--      <i class="info icon"></i>-->
+<!--      <div class="content">-->
+<!--        <div class="header">-->
+<!--          Attention!-->
+<!--        </div>-->
+<!--        <p>Results will be updated on January 6. And by the way HAPPY NEW YEAR.</p>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--</div>-->
+
 <div class="ui middle aligned center aligned grid" style = "margin: 0; padding: 0; max-width: 550px; position: relative; left: 50%; top: 8%; transform: translateX(-50%)">
   <div class="column">
 
